--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ./src/index.html --open",
     "postinstall": "parcel build ./src/index.html",
-    "start": "parcel ./src/index.html"
+    "start": "parcel ./src/index.html -p $PORT"
   },
   "keywords": [],
   "author": "",
