--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel ./src/index.html -p $PORT",
     "dev": "parcel ./src/index.html --open",
-    "postinstall": "parcel build ./src/index.html",
-    "start": "parcel ./src/index.html -p $PORT"
+    "build": "parcel build ./src/index.html",
+    "postinstall": "yarn build",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "parcel-bundler": "^1.9.7"
+  },
+  "devDependencies": {
+    "prettier": "^1.13.7",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "typescript": "^2.9.2",
+    "typescript-eslint-parser": "^17.0.1"
   }
 }
