--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parcel-bundler": "^1.9.7"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "prettier": "^1.13.7",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
